deployment/logistic/k8s-logistic-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logistic-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logistic-db
  template:
    metadata:
      labels:
        app: logistic-db
    spec:
      containers:
      - name: logistic-db
        image: postgres:latest
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 5432
        readinessProbe:
          exec:
            command:
            - pg_isready
            - -d
            - $(POSTGRES_DB)
            - -U
            - $(POSTGRES_USER)
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 5
        volumeMounts:
        - name: logistic-data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: logistic-data
        persistentVolumeClaim:
          claimName: logistic-pvc
---
# logistic Broker Consumer
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logistic-broker-consumer
  labels:
    app: logistic-broker-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logistic-broker-consumer
  template:
    metadata:
      labels:
        app: logistic-broker-consumer
    spec:
      containers:
      - name: logistic-broker-consumer
        image: us-central1-docker.pkg.dev/ccp-perspicapps/ccp-images/logistic:latest
        command: ["bash", "-c", "./start_workers.sh"]
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
---
# logistic API
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logistic-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logistic-api
  template:
    metadata:
      labels:
        app: logistic-api
    spec:
      containers:
      - name: logistic-api
        image: us-central1-docker.pkg.dev/ccp-perspicapps/ccp-images/logistic:latest
        command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8001"]
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        ports:
        - containerPort: 8001
        livenessProbe:
          httpGet:
            path: /logistic/health
            port: 8001
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 1
          failureThreshold: 2
