deployment/logistic/k8s-service.yml
apiVersion: v1
kind: Service
metadata:
  name: logistic-db
spec:
  selector:
    app: logistic-db
  ports:
  - port: 5432
    targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: logistic-api
  annotations:
    cloud.google.com/backend-config: '{"default": "logistic-back-config"}'
spec:
  selector:
    app: logistic-api
  ports:
  - port: 8001
    targetPort: 8001
