deployment/logistic/k8s-ingress.yml
# INGRESS
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ccp-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "sta-ingress-ip"
spec:
  rules:
  - http:
      - path: /logistic
        pathType: Prefix
        backend:
          service:
            name: logistic-api
            port:
              number: 8001
